--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,13 @@
 {
-    "python.pythonPath": "C:\\Anaconda3\\python.exe"
+    "python.pythonPath": "C:\\Anaconda3\\python.exe",
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./unit_testing",
+        "-p",
+        "*_test.py"
+    ],
+    "python.testing.pytestEnabled": false,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.unittestEnabled": true
 }
